# servare

./: .env  .gitignore  Cargo.toml  Justfile  Makefile  README.md  configuration.toml  docker-compose.yml  sqlx-data.json
.github/workflows/: main.yml
assets/: style.css
hurl/: add_test_feeds.hurl
migrations/: 20221221201140_initial_user_table_schema.sql  20221222102008_add_email_to_users_table.sql  20221222212449_add_hashed_password_to_users_table.sql  20221222214911_change_users_column_constraints.sql  20221224154519_users_password_is_not_optional.sql  20221227214024_initial_sessions_table.sql  20221229205503_initial_feeds_table.sql  20221230141820_modify_feed_not_nullable.sql  20221230142435_feed_remove_last_checked_at.sql  20221230151130_feeds_rename_created_at.sql  20230110214250_jobs_table.sql  20230110224350_feeds_add_site_favicon.sql  20230115181453_rework_jobs.sql  20230115200136_feeds_has_favicon.sql  20230115211330_jobs_remove_status_done.sql  20230120221510_rework_feed_entries.sql  20230129010034_feed_entries_refactor_creator.sql  20230129144306_initial_schema.sql  20230129191701_integer_primary_keys.sql  20230129214552_feed_entry_add_external_id.sql  20230226144320_feed_entry_read_at.sql
src/: authentication.rs  configuration.rs  domain.rs  feed.rs  html.rs  job.rs  lib.rs  main.rs  parsed_feed.rs  run_group.rs  shutdown.rs  startup.rs  telemetry.rs  tem.rs  tests.rs
src/authentication/: middleware.rs  password.rs
src/routes/: feeds.rs  home.rs  login.rs  mod.rs  settings.rs  unread.rs
src/sessions/: mod.rs  state.rs  store.rs
templates/: base.html.j2  feed_entries.html.j2  feed_entry.html.j2  feeds.html.j2  feeds_add.html.j2  feeds_base.html.j2  home.html.j2  login.html.j2  settings.html.j2  signup.html.j2  unread.html.j2
testdata/: tailscale_rss_feed.xml  tailscale_rss_feed_relative_image.xml
tests/dashboard/: feed.rs  helpers.rs  main.rs  routes.rs
tests/dashboard/routes/: feeds.rs  login.rs  mod.rs  settings.rs
