[package]
name = "servare"
description = "The Servare service"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Rischmann"]
license = "Proprietary"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "servare"

[dependencies]
# Error stuff
thiserror = "1"
anyhow = "1"

# SQL on steroids
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time", "migrate", "offline"] }

# HTTP stuff
tokio = { version = "1.2", features = ["signal", "macros"] }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1"] }
tower-http = { version = "0.3", features = ["trace", "fs"] }
http = "0.2"
hyper = "0.14"

# Other stuff
time = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
askama = "0.11"
uuid = { version = "1", features = ["serde", "v1", "v4"] }

# Serialization stuff
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }

fake = "2.5"
