[package]
name = "servare"
description = "The Servare service"
version = "0.1.0"
edition = "2021"
authors = ["Vincent Rischmann"]
license = "Proprietary"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "servare"

[dependencies]
# Error stuff
thiserror = "1"
anyhow = "1"

# Crypto
argon2 = { version = "0.4", features = ["std"] }

# SQL on steroids
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time", "migrate", "offline"] }

# HTTP stuff
tokio = { version = "1.2", features = ["signal", "macros"] }
axum = { version = "0.6", default-features = false, features = ["tokio", "http1", "form"] }
axum-extra = { version = "0.4", default-features = false, features = ["cookie", "cookie-private"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["trace", "fs"] }
http = "0.2"
hyper = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }

# Other stuff
time = "0.3"
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.13", default-features = false, features = ["toml"] }
askama = "0.11"
uuid = { version = "1", features = ["serde", "v1", "v4"] }
validator = "0.14"
rand = { version = "0.8", features = ["std_rng"] }

# Serialization stuff
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"

# Observability
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"

[dev-dependencies]
fake = "2.5"
wiremock = "0.5"
once_cell = "1"
